add primary slider

--- a/css/main.css
+++ b/css/main.css
@@ -88,3 +88,24 @@ body{
 .navigation-bar>.user-border>.user>a:nth-of-type(2){
     background-color: var(--mycolor2);
 }
+.header-border{
+    width: 100%;
+    height: 88vh;
+    display: flex;
+    justify-content: center;
+    direction: ltr;
+    background-color: #669900;
+}
+.slider-border{
+    width: 96%;
+    height: 90%;
+}
+.header-border>.slider-border img{
+    width: 100%;
+    height: 88vh;
+
+    /*
+    width: 1474px;
+    height: 629px;
+    */
+}
