--- a/css/main.css
+++ b/css/main.css
@@ -97,10 +97,10 @@ body{
     background-color: #669900;
 }
 .slider-border{
-    width: 96%;
+    width: 100%;
     height: 90%;
 }
-.header-border>.slider-border img{
+.header-border>.slider-border img {
     width: 100%;
     height: 88vh;
 
@@ -108,4 +108,36 @@ body{
     width: 1474px;
     height: 629px;
     */
+}
+.prev-button,.next-button{
+    width: 3vw;
+    height: 5vw;
+    border: none;
+    outline: none;
+    position: absolute;
+    z-index: 999;
+    top: 50%;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.prev-button{
+    left: 4%;
+}
+.next-button{
+    right: 4%;
+}
+/*
+.prev-button:active{
+}
+.next-button:active{
+}
+*/
+.prev-button #left{
+    width: 55%;
+    height: auto;
+}
+.next-button #right{
+    width: 55%;
+    height: auto;
 }
