--- a/css/main.css
+++ b/css/main.css
@@ -91,9 +91,8 @@ body{
 .header-border{
     width: 100%;
     height: 88vh;
-    display: flex;
-    justify-content: center;
     direction: ltr;
+    position: relative;
     background-color: #669900;
 }
 .slider-border{
@@ -170,4 +169,103 @@ body{
     color: var(--white);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+.header-border .header-items{
+    width: 80%;
+    height: 80%;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    z-index: 99;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.header-border .header-items>h1{
+    font-size: 50px;
+    font-weight: 200;
+    color: white;
+}
+.header-border .header-items>h2{
+    font-size: 20px;
+    font-weight: 100;
+    color: white;
+    word-spacing: 2px;
+    margin: 10px 0;
+}
+.header-border .header-items>.search-box{
+    width: 45%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+.header-border .header-items>.search-box>label{
+    width: 17%;
+    height: 24%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 13px 13px 0 0;
+    background-color: var(--white);
+    font-weight: 300;
+    font-size: 14px;
+    color: var(--mycolor);
+}
+.header-border .header-items>.search-box>div:first-of-type{
+    width: 100%;
+    height: 75%;
+    display: flex;
+    flex-direction: row-reverse;
+}
+.header-border .header-items>.search-box>div:first-of-type>.search-box{
+    width: 80%;
+    height: 65%;
+    border-radius: 0 0 13px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--white);
+}
+.header-border .header-items>.search-box>div:first-of-type>.search-box>input{
+    width: 80%;
+    height: 50%;
+    outline: none;
+    border: none;
+    direction: rtl;
+    border-radius: 8px;
+    padding-right: 10px;
+    background-color: #F6F6F6;
+    border-bottom: 1px solid var(--mycolor);
+
+}
+.header-border .header-items>.search-box>div:first-of-type>.search-box>input::placeholder{
+    font-size: 14px;
+    color: #BEBEBE;
+    opacity: 80%;
+    font-weight: 300;
+}
+.header-border .header-items>.search-box>div:first-of-type>.submit-box{
+    width: 20%;
+    height: 65%;
+    border-radius: 13px 0 0 13px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: var(--white);
+}
+.header-border .header-items>.search-box>div:first-of-type>.submit-box>input{
+    width: 4vw;
+    height: 4vw;
+    border-radius: 50%;
+    outline: none;
+    border: none;
+    background-image: url("../images/search icon.svg");
+    background-position: center center;
+    background-size: 39%;
+    background-repeat: no-repeat;
+    background-color: var(--mycolor);
+    cursor: pointer;
 }
