--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ body{
     list-style: none;
 }
 .navigation-bar>nav>ul>li>a{
+    font-weight: 200;
     text-decoration: none;
     color: #272727;
 }
@@ -183,12 +184,12 @@ body{
     justify-content: center;
 }
 .header-border .header-items>h1{
-    font-size: 50px;
+    font-size: 65px;
     font-weight: 200;
     color: white;
 }
 .header-border .header-items>h2{
-    font-size: 20px;
+    font-size: 35px;
     font-weight: 100;
     color: white;
     word-spacing: 2px;
@@ -196,7 +197,7 @@ body{
 }
 .header-border .header-items>.search-box{
     width: 45%;
-    height: 40%;
+    height: 45%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -204,11 +205,11 @@ body{
 }
 .header-border .header-items>.search-box>label{
     width: 17%;
-    height: 24%;
+    height: 22%;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 13px 13px 0 0;
+    border-radius: 14px 14px 0 0;
     background-color: var(--white);
     font-weight: 300;
     font-size: 14px;
@@ -216,21 +217,21 @@ body{
 }
 .header-border .header-items>.search-box>div:first-of-type{
     width: 100%;
-    height: 75%;
+    height: 78%;
     display: flex;
     flex-direction: row-reverse;
 }
-.header-border .header-items>.search-box>div:first-of-type>.search-box{
-    width: 80%;
+.header-border .header-items>.search-box>div:first-of-type>.inner-search-box{
+    width: 85%;
     height: 65%;
-    border-radius: 0 0 13px 0;
+    border-radius: 0 0 22px 0;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: var(--white);
 }
-.header-border .header-items>.search-box>div:first-of-type>.search-box>input{
-    width: 80%;
+.header-border .header-items>.search-box>div:first-of-type>.inner-search-box>input{
+    width: 85%;
     height: 50%;
     outline: none;
     border: none;
@@ -241,16 +242,16 @@ body{
     border-bottom: 1px solid var(--mycolor);
 
 }
-.header-border .header-items>.search-box>div:first-of-type>.search-box>input::placeholder{
+.header-border .header-items>.search-box>div:first-of-type>.inner-search-box>input::placeholder{
     font-size: 14px;
     color: #BEBEBE;
     opacity: 80%;
     font-weight: 300;
 }
 .header-border .header-items>.search-box>div:first-of-type>.submit-box{
-    width: 20%;
+    width: 15%;
     height: 65%;
-    border-radius: 13px 0 0 13px;
+    border-radius: 22px 0 0 22px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -268,4 +269,29 @@ body{
     background-repeat: no-repeat;
     background-color: var(--mycolor);
     cursor: pointer;
+}
+.why-zagros-border{
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.why-zagros-border>p{
+    color: var(--mycolor);
+    font-size: 35px;
+    font-weight: 200;
+}
+.why-zagros-border>.between{
+    width: 6.5%;
+    height: 1px;
+    margin: 15px 0 50px 0;
+    background-color: #D9D9D9;
+}
+.why-zagros-border>.header-text{
+    width: 75%;
+    height: 30%;
+    font-weight: 200;
+    font-size: 18px;
 }
