--- a/css/main.css
+++ b/css/main.css
@@ -280,7 +280,7 @@ body{
 }
 .why-zagros-border>p{
     color: var(--mycolor);
-    font-size: 35px;
+    font-size: 34px;
     font-weight: 200;
 }
 .why-zagros-border>.between{
@@ -294,4 +294,71 @@ body{
     height: 30%;
     font-weight: 200;
     font-size: 18px;
+}
+.last-tour-border{
+    width: 100%;
+    height: 82vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #EAEAEA;
+}
+.last-tour-border>p{
+    color: black;
+    font-size: 34px;
+    font-weight: 200;
+}
+.last-tour-border>.between{
+    width: 6.5%;
+    height: 1px;
+    margin: 15px 0 50px 0;
+    background-color: var(--mycolor);
+}
+.last-tour-border>.last-tour{
+    width: 50%;
+    height: 45%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.last-tour-border>.last-tour>.inner-last-tour{
+    width: 31%;
+    height: 100%;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-bottom: 1px solid var(--mycolor);
+}
+.last-tour-border>.last-tour>.inner-last-tour>p:first-of-type{
+    font-size: 14px;
+    color: #BDBDBD;
+    font-weight: 200;
+}
+.last-tour-border>.last-tour>.inner-last-tour>img:first-of-type{
+    width: 78%;
+    height: 60%;
+    border-radius: 30px;
+}
+.last-tour-border>.last-tour>.inner-last-tour>div:first-of-type{
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.last-tour-border>.last-tour>.inner-last-tour>div:first-of-type>p:first-of-type{
+    font-size: 12px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.5);
+}
+.last-tour-border>.last-tour>.inner-last-tour>div:first-of-type>p:nth-of-type(2){
+    font-size: 10px;
+    font-weight: 400;
+    color: #3E86F5;
+    background-color: #F2F6FF;
+    border-radius: 14px;
+    padding: 4px 10px;
 }
