--- a/css/main.css
+++ b/css/main.css
@@ -317,7 +317,7 @@ body{
 }
 .last-tour-border>.last-tour{
     width: 50%;
-    height: 45%;
+    height: 53%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -329,7 +329,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     background-color: white;
     border-bottom: 1px solid var(--mycolor);
 }
@@ -340,7 +340,7 @@ body{
 }
 .last-tour-border>.last-tour>.inner-last-tour>img:first-of-type{
     width: 78%;
-    height: 60%;
+    height: 53%;
     border-radius: 30px;
 }
 .last-tour-border>.last-tour>.inner-last-tour>div:first-of-type{
@@ -356,9 +356,50 @@ body{
 }
 .last-tour-border>.last-tour>.inner-last-tour>div:first-of-type>p:nth-of-type(2){
     font-size: 10px;
-    font-weight: 400;
+    font-weight: 600;
     color: #3E86F5;
     background-color: #F2F6FF;
     border-radius: 14px;
     padding: 4px 10px;
+}
+.last-tour-border>.last-tour>.inner-last-tour>div:nth-of-type(2){
+    width: 81%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.last-tour-border>.last-tour>.inner-last-tour>div:nth-of-type(2)>p:first-of-type{
+    font-size: 25px;
+    font-weight: 200;
+}
+.last-tour-border>.last-tour>.inner-last-tour>div:nth-of-type(2)>p:nth-of-type(2){
+    font-size: 12px;
+    font-weight: 300;
+    color: rgba(0, 0, 0, 1);
+}
+.last-tour-border>.last-tour>.inner-last-tour>a{
+    font-size: 12px;
+    font-weight: 300;
+    padding: 8px 13px;
+    /*width: 50%;*/
+    /*height: 10%;*/
+    background-color: #FFF0E5;
+    color: #FF9446;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 7px;
+    text-decoration: none;
+}
+.last-tour-border>.see-last-tour{
+    font-weight: 200;
+    padding: 8px 15px;
+    color: white;
+    background-color: var(--mycolor);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 13px;
+    text-decoration: none;
+    margin-top: 40px;
 }
